how did you not fully change factory to metis